Falta que el csv tenga los hechos, el poder crear una solicitud